Prevent search label from overlapping submit button

--- a/Resources/Private/Scss/Sections/_search.scss
+++ b/Resources/Private/Scss/Sections/_search.scss
@@ -118,11 +118,11 @@
 	cursor: text;
 	line-height: 1.3;
 	opacity: 1;
-	padding: .5em (2 * $grid) 0 .5em;
+	padding: .5em;
 	position: absolute;
 	transition-delay: $transition-duration;
 	z-index: 10;
-	width: 100%;
+	width: 70%;
 
 	.-show-popup & {
 		opacity: 0;
